Added hashing and stream cipher support